# Cpp_QR_code_generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  QR code generator.sln  QR code generator.vcxproj  QR code generator.vcxproj.filters  README.md  conanfile.txt
.conan/: CONANDATA_Debug_x64
QR_code_generator/: CMakeLists.txt  QR_code_generator.cpp  QR_code_generator.h  qrcodegen.cpp
